src/test/resources/fixtures/security/shuffle.php
<?php

    <error descr="Insufficient entropy, random_int/random_bytes based solution would be more secure.">shuffle</error> ([]);